# crop-tool

./: .gitignore  README.md  crop-tool.spec  pyproject.toml
crop_tool/: __init__.py  __main__.py  cli.py  crop_canvas.py  file_utils.py  folder_strip.py  image_dialog.py  image_formats.py  image_io.py  main_window.py
scripts/: build-bundle.sh  capture_screenshots.py  generate_demo_assets.py  install-file-manager.sh  install.sh
share/applications/: crop-tool.desktop.in
share/nautilus-python/extensions/: crop-tool-nautilus.py
tests/: test_aspect_ratio.py  test_folder_strip.py  test_image_io.py
